misc crash dump improvements

XMLWordPrintable

    • b18

        Try to recover and output meaningful information in more situations, such as:
        - when a pointer is in Method metadata memory range, but the memory is not committed
        - when we call a bad address

        When calling a bad address, we usually don't get a meaningful stack backtrace, but in many situations we can if we know where to find the caller information.

              Assignee:
              Dean Long
              Reporter:
              Dean Long
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

                Created:
                Updated:
                Resolved: