8294160: misc crash dump improvements

Reviewed-by: rrich
Backport-of: 6f8f28e7566701b195ecc855f3e802cd7145e9aa